--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "discord.js": "^14.16.2",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "mongoose": "^8.6.3"
   }
 }
