--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chalk": "^4.1.1",
     "discord.js": "^14.16.2",
     "js-yaml": "^4.1.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.6.3"
   }
 }
